--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,16 @@
 @import "menu_style";
 
 @import "hero_area";
+
+@import "checkout";
+
+@import "about";
+
+@import "why";
+
+@import "living";
+
+@import "contact";
+
+@import "footer";
+
